# mavrauder_collection

./: .gitignore  Docker-compose.yaml  Dockerfile  README.md  pyproject.toml
src/: db.sqlite3
src/carts/: models.py  serializers.py  urls.py  views.py
src/carts/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_rename_manufacterer_name_manufacturer_manufacturer_name.py  0004_alter_manufacturer_options_alter_product_options.py
src/users/: admin.py  forms.py  managers.py  models.py  serializers.py
src/users/migrations/: 0001_initial.py
