[tool.poetry]
name = "mavrauder-collection"
version = "0.1.0"
description = "An e-commerce backend system as a portifolio project for DevX Solutions"
authors = ["Godfred777 <81054545+Godfred777@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
